Sun Jan  4 10:47:27 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/*:
          Updated for next 1.6.8 micro release

Sun Jan  4 03:55:27 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Service_Gestalt.cpp (process_directives): Ensure that the
          number of failed services is returned.  Thanks to Milan
          Cvetkovic <milan dot cvetkovic at mpathix dot com> for
          contributing this.

Fri Jan  2 15:38:31 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_sunos5_g++.GNU:

          Reverted this change for bugzilla #3232:
          Thu May  8 10:51:29 UTC 2008  Steve Huston  <shuston@riverace.com>
          While it does remove the redundant -pipe option it also removes
          needed options like -g and -O.
          Thanks to <milan dot cvetkovik at mpathix dot com> for bringing it
          up on the tao-users mailing list.

Wed Dec 31 15:38:33 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * ace/Stack_Trace.cpp:

          Fixed an off-by-one error in the string formatting code for Linux.

        * tests/Stack_Trace_Test.cpp:

          Use proper ACE_Log_Msg formatters (stack traces are always narrow).

Fri Dec 26 16:42:33 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * bin/ciao_tests.lst:
          Correct test location.

Fri Dec 26 09:10:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp (ACE_Log_Msg_Manager::close):
          Added ACE_GCC_DESTRUCTOR_ATTRIBUTE to this method so that it is called
          at unload of the ACE library which fixes some valgrind errors

Thu Dec 25 18:57:10 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Merry Christmas and may there be Peace on Earth.

Wed Dec 24 19:09:53 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/Module.cpp (open, ACE_Module):
        * ace/Service_Types.{h cpp} (find):