@@ -12,10 +12,10 @@ namespace ACE_OS {
     // This method computes the largest integral value not greater than x.
     if(x > 0)
       return static_cast<long> (x);
-    else if (static_cast<long> (x) == x)
-      return x;
-    else
+    else if ((static_cast<long> (x) < x) || (static_cast<long> (x) > x) )
       return static_cast<long>(x) - 1;
+    else
+      return x;
   }
 
   ACE_INLINE double
@@ -24,10 +24,10 @@ namespace ACE_OS {
     // This method computes the smallest integral value not less than x.
     if (x < 0)
       return static_cast<long> (x);
-    else if (static_cast<long> (x) == x)
-      return x;
-    else
+    else if ((static_cast<long> (x) < x) || (static_cast<long> (x) > x))
       return static_cast<long> (x) + 1;
+    else
+      return x;
   }
 
   ACE_INLINE double
